chore: minor issues fix